--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,7 +23,8 @@
 
 // 5. Components
 @import
-  'components/grid';
+  'components/grid',
+  'components/nav';
 
 // 6. Page-specific styles
 @import
