--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,12 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Varela+Round);
 
 $color-background: black;
-$color-main: white;
+$color-main: rgb(216, 216, 216);
 $color-active: black;
 $color-link: black;
 
-$button-height: 27px;
-$button-width: 35px;
+$button-height: 50px;
+$button-width: 55px;
 
 body {
   background: $color-background;
@@ -25,7 +25,9 @@ body {
   p {
     font-size: 20px;
   }
-  
+  h1 {
+    letter-spacing: 4px;
+  }
   a {
     display: inline-block;
     position: relative;
@@ -103,11 +105,11 @@ h1 {
   cursor: pointer;
     
     &:nth-of-type(2) {
-      top: 11px;
+      top: 17px;
     }
     
     &:nth-of-type(3) {
-      top: 22px;
+      top: 34px;
     }
   }
 }
