added video back

--- a/css/main.css
+++ b/css/main.css
@@ -503,6 +503,13 @@ body {
   .row .col-3-of-4 {
     width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
+.down_button {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 100px;
+  color: black !important;
+  font-size: 10rem; }
+
 body {
   background: black; }
 
@@ -663,3 +670,19 @@ h1 {
   text-align: center; }
   .main_content div {
     margin-top: 50rem; }
+
+.bg {
+  height: 105vh; }
+  .bg__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    opacity: .4;
+    overflow: hidden; }
+    .bg__video__content {
+      height: 100%;
+      width: 100%;
+      object-fit: cover; }
