--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -5,3 +5,27 @@
     margin-top: 50rem;
   }
 }
+
+.bg {
+  height: 105vh;
+
+  &__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    opacity: .4;
+    overflow: hidden;
+    
+  
+    &__content {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  
+  }
+}
+
