--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,10 +1,3 @@
-.main_content {
-  margin-top: 30rem;
-  text-align: center;
-  div {
-    margin-top: 50rem;
-  }
-}
 
 .bg {
   height: 105vh;
@@ -13,7 +6,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 105%;
     width: 100%;
     z-index: -1;
     opacity: .4;
@@ -29,3 +22,11 @@
   }
 }
 
+
+.main_content {
+  // margin-top: 30rem;
+  text-align: center;
+  div {
+    margin-bottom: 50rem;
+  }
+}
