--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,13 @@ header {
   position: absolute;
   width: 1px; }
 
+.mirror {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1); }
+
+.small_center_text {
+  text-align: center; }
+
 /**
  * Basic typography style for copy text
  */
@@ -575,16 +582,14 @@ h1 {
   .button_container:hover {
     opacity: .7; }
   .button_container.active .top {
-    transform: translateY(15px) translateX(0) scaleX(1.8) rotate(65deg);
-    background: black;
-    border-radius: 30px; }
+    transform: translateY(10px) translateX(0) scaleX(1.2) rotate(35deg);
+    background: black; }
   .button_container.active .middle {
     opacity: 0;
     background: black; }
   .button_container.active .bottom {
-    transform: translateY(-16px) scaleX(1.8) translateX(0) rotate(-65deg);
-    background: black;
-    border-radius: 30px; }
+    transform: translateY(-12px) scaleX(1.2) translateX(0) rotate(-35deg);
+    background: black; }
   .button_container span {
     background: #d8d8d8;
     border: none;
@@ -614,16 +619,17 @@ h1 {
   .overlay.open {
     opacity: 1;
     visibility: visible;
-    height: 100%; }
+    height: 100%;
+    z-index: 10; }
     .overlay.open li {
       animation: fadeInRight .5s ease forwards;
-      animation-delay: .35s; }
+      animation-delay: .25s; }
       .overlay.open li:nth-of-type(2) {
-        animation-delay: .4s; }
+        animation-delay: .3s; }
       .overlay.open li:nth-of-type(3) {
-        animation-delay: .45s; }
+        animation-delay: .35s; }
       .overlay.open li:nth-of-type(4) {
-        animation-delay: .50s; }
+        animation-delay: .40s; }
   .overlay nav {
     position: relative;
     height: 70%;
@@ -690,7 +696,58 @@ h1 {
       width: 100%;
       object-fit: cover; }
 
-.main_content {
-  text-align: center; }
-  .main_content div {
-    margin-bottom: 50rem; }
+.after_bg {
+  height: 15rem;
+  background: linear-gradient(black, #25252f); }
+
+.after_landing {
+  height: 15rem;
+  background: linear-gradient(black, #25252f); }
+
+.landing_section {
+  height: 100vh;
+  background-color: #25252f; }
+  .landing_section .mobile {
+    display: none; }
+  .landing_section .desktop {
+    display: block; }
+  .landing_section--row {
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; }
+    .landing_section--rowlanding_section--img {
+      flex: 1;
+      border-radius: 5px; }
+    .landing_section--row-middle_content {
+      align-self: center;
+      flex: 2; }
+      .landing_section--row-middle_content h1 {
+        font-size: 3rem; }
+      .landing_section--row-middle_content ul {
+        padding: 0; }
+      .landing_section--row-middle_content li {
+        text-align: center;
+        padding: 1rem 0 1rem 0;
+        list-style: none;
+        font-size: 1.3rem;
+        line-height: 1.3; }
+        .landing_section--row-middle_content li i {
+          font-size: 1.5rem; }
+      .landing_section--row-middle_content .small_hat {
+        margin-top: 4rem;
+        height: 30px;
+        display: block;
+        margin: 0 auto; }
+
+@media screen and (max-width: 1045px) {
+  .landing_section {
+    height: 120vh; }
+    .landing_section .desktop {
+      display: none; }
+    .landing_section .mobile {
+      display: block; }
+    .landing_section--row {
+      align-items: center;
+      flex-direction: column;
+      flex-wrap: none; } }
