--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -27,5 +27,5 @@
 }
 .after_landing {
   height: 15rem;
-  background: linear-gradient(black, rgb(37, 37, 47));
+  background: linear-gradient(rgb(37, 37, 47), black );
 }
