--- a/sass/pages/_landing.scss
+++ b/sass/pages/_landing.scss
@@ -13,15 +13,15 @@
     // align-items: center;
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
-    
-    &landing_section--img {
-      flex: 1;
-      border-radius: 5px;
+    flex-wrap: nowrap;
+
+    .landing_section--img {
+      width: 100%;
+      border-radius: 3px;
     }
     &-middle_content {
       align-self: center;
-      flex: 2;
+      flex: 0 0 45vw;
       h1 {
         font-size: 3rem;
       }
@@ -44,24 +44,83 @@
         display: block;
         margin: 0 auto;
       }
+      .small_center_text {
+        margin-bottom: 3rem;
+      }
     }
   }
 }
 
-
-@media screen and (max-width: 1045px) {
-.landing_section {
-  .desktop {
-   display: none; 
-  }
-  .mobile {
-    display: block;
-  }
-  height: 120vh;
-  &--row {
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: none;
+@media screen and (max-width: 940px) {
+  .landing_section {
+    .desktop {
+      display: none;
+    }
+    .mobile {
+      display: block;
+    }
+    height: 100vh;
+    &--row {
+      align-items: center;
+      flex-direction: column;
+      flex-wrap: none;
+     
+      .landing_section--img {
+        // height: 25vh !important;
+        width: 30rem !important;
+        max-height: 10rem;
+      }
+    }
   }
 }
+
+@media screen and (max-width: 480px) {
+  .landing_section {
+    height: 100vh;
+    &--row {
+      &-middle_content {
+      margin: 0 1rem;
+      }
+      display: block;
+      .landing_section--img {
+        height: 25vh !important;
+        width: 100vw !important;
+      }
+    }
+  }
+}
+@media screen and (max-width: 370px) {
+  .landing_section {
+    height: 100vh;
+    &--row {
+      display: block;
+      h1 {
+        font-size: 2.5rem;
+        margin-bottom: .5rem;
+      }
+      ul {
+        padding: 0;
+      }
+      li {
+        i {
+          font-size: 1.3rem;
+        }
+        text-align: center;
+        padding: 1rem 0 1rem 0;
+        list-style: none;
+        font-size: 1.2rem;
+        line-height: 1.3;
+      }
+      .small_hat {
+        margin-top: 4rem;
+        height: 20px;
+        display: block;
+        margin: 0 auto;
+      }
+      .landing_section--img {
+        height: 20vh !important;
+        width: 100vw !important;
+      }
+    }
+  }
 }
