--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -129,6 +129,7 @@ h1 {
   visibility: hidden;
   transition: opacity .35s, visibility .35s, height .35s;
   overflow: hidden;
+  z-index: 10;
   
   &.open {
     opacity: 1;
@@ -200,6 +201,7 @@ h1 {
           height: 3px;
           background: $color-link;
           transition: .35s;
+          z-index: 10;
         }
       }
     }
