--- a/sass/pages/_landing.scss
+++ b/sass/pages/_landing.scss
@@ -22,31 +22,31 @@
     &-middle_content {
       align-self: center;
       flex: 0 0 45vw;
-      h1 {
-        font-size: 3rem;
+    }
+    h1 {
+      font-size: 3rem;
+    }
+    ul {
+      padding: 0;
+    }
+    li {
+      i {
+        font-size: 1.5rem;
       }
-      ul {
-        padding: 0;
-      }
-      li {
-        i {
-          font-size: 1.5rem;
-        }
-        text-align: center;
-        padding: 1rem 0 1rem 0;
-        list-style: none;
-        font-size: 1.3rem;
-        line-height: 1.3;
-      }
-      .small_hat {
-        margin-top: 4rem;
-        height: 30px;
-        display: block;
-        margin: 0 auto;
-      }
-      .small_center_text {
-        margin-bottom: 3rem;
-      }
+      text-align: center;
+      padding: 1rem 0 1rem 0;
+      list-style: none;
+      font-size: 1.3rem;
+      line-height: 1.3;
+    }
+    .small_hat {
+      margin-top: 4rem;
+      height: 30px;
+      display: block;
+      margin: 0 auto;
+    }
+    .small_center_text {
+      margin-bottom: 10vh;
     }
   }
 }
@@ -64,12 +64,18 @@
       align-items: center;
       flex-direction: column;
       flex-wrap: none;
-     
+
       .landing_section--img {
         // height: 25vh !important;
-        width: 30rem !important;
+        width: 80% !important;
         max-height: 10rem;
       }
+    }
+    .small_center_text {
+      margin-bottom: 2rem;
+    }
+    .landing_button {
+      margin-bottom: 3rem;
     }
   }
 }
@@ -79,7 +85,7 @@
     height: 100vh;
     &--row {
       &-middle_content {
-      margin: 0 1rem;
+        margin: 0 1rem;
       }
       display: block;
       .landing_section--img {
@@ -96,7 +102,7 @@
       display: block;
       h1 {
         font-size: 2.5rem;
-        margin-bottom: .5rem;
+        margin-bottom: 0.5rem;
       }
       ul {
         padding: 0;
