--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -1,8 +1,9 @@
 .about_section {
   height: auto;
   &--heading {
+    padding-top: 2rem;
     font-size: 2.4rem;
-    margin-bottom: 6rem;
+    margin-bottom: 5rem;
   }
 
   &__row {
@@ -14,7 +15,7 @@
       clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
       width: auto;
       padding: 1rem 5rem;
-      margin-bottom: 7rem;
+      margin-bottom: 4rem;
       img {
         height: 12.5rem;
         border-radius: 100px;
@@ -92,6 +93,7 @@
   }
 }
 
+
 @media screen and (max-width: 815px) {
   .about_section {
     overflow: hidden;
@@ -110,7 +112,7 @@
           width: 11rem;
         }
         &-text_container {
-          width: 100%;
+          width: 105%;
           &--icon {
           }
           &-big_name {
@@ -137,7 +139,7 @@
           width: 11rem;
         }
         &-text_container {
-          width: 100%;
+          width: 105%;
           &--icon {
           }
           &-big_name {
@@ -151,6 +153,21 @@
 
         p {
         }
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 440px) {
+  .about_section {
+    &__row {
+      &--max {
+        padding: 1rem 0 !important;
+        &-text_container {
+        }
+      }
+      &--booke {
       }
     }
   }
