--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,10 +1,14 @@
 // MAIN COLORS
 
 
-// GRIDS
-$grid-width: 114rem;
-$gutter-vertical: 8rem;
-$gutter-horizontal: 6rem;
+// COLORS
+
+$color-main-grey: #25252F;
+$color-main-blue: #419596;
+$color-main-purple: #270520;
+
+// Font sizes
+$header-font: 3rem;
 
 /// Regular font family
 /// @type List
