--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -1,47 +1,39 @@
-.row {
-  max-width: $grid-width;
-  margin: 0 auto;
+/*  SECTIONS  */
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
 
-  &:not(:last-child) {
-    margin-bottom: $gutter-vertical;
-  }
+/*  COLUMN SETUP  */
+.col {
+	display: block;
+	float:left;
+	margin: 1% 0 1% 1.6%;
+}
+.col:first-child { margin-left: 0; }
 
-  @include clearfix;
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+/*  GRID OF TWO  */
+.span_2_of_2 {
+	width: 100%;
+}
+.span_1_of_2 {
+	width: 49.2%;
+}
 
-  [class^="col-"] {
-    float: left;
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
 
-    &:not(:last-child) {
-      margin-right: $gutter-horizontal;
-    }
-  }
-  .col-1-of-2 {
-    width: calc((100% - #{$gutter-horizontal}) / 2);
-  }
+@media only screen and (max-width: 480px) {
+	.col { 
+		margin: 1% 0 1% 0%;
+	}
+}
 
-  .col-1-of-3 {
-    width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
-  }
-
-  .col-1-of-4 {
-    width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
-  }
-
-  .col-2-of-3 {
-    width: calc(
-      ((100% - 2 * #{$gutter-horizontal}) / 3) * 2 + #{$gutter-horizontal}
-    );
-  }
-
-  .col-2-of-4 {
-    width: calc(
-      ((100% - 3 * #{$gutter-horizontal}) / 4) * 2 + #{$gutter-horizontal}
-    );
-  }
-
-  .col-3-of-4 {
-    width: calc(
-      3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal}
-    );
-  }
+@media only screen and (max-width: 480px) {
+	.span_2_of_2, .span_1_of_2 { width: 100%; }
 }
