added showcase page and started footer

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,5 @@
-// -----------------------------------------------------------------------------
-// This file contains all styles related to the footer of the site/application.
-// -----------------------------------------------------------------------------
-
-
-@media only screen and (max-width: 767px) {
+footer {
+  li {
+    list-style: none;
+  }
 }
