--- a/sass/pages/_work.scss
+++ b/sass/pages/_work.scss
@@ -1,4 +1,5 @@
 .showcase_section {
+  
   padding-top: 2rem;
   padding-bottom: 10rem;
   height: auto;
@@ -6,6 +7,14 @@
   &--header {
     text-align: center;
     font-size: $header-font;
+  }
+
+  .centered {
+    margin-top: 3rem;
+    background-color: inherit;
+    .landing_button {
+      width: 11rem;
+    }
   }
 
   // APPALACHIAN COUNSELING
