--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -29,3 +29,7 @@
   height: 15rem;
   background: linear-gradient(rgb(37, 37, 47), black );
 }
+.before_footer {
+  height: 15rem;
+  background: linear-gradient(rgb(37, 37, 47), $color-main-blue);
+}
