--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -23,7 +23,7 @@
       }
       &-text_container {
         height: 100%;
-        width: 25rem;
+        width: 26rem;
         margin: 0 1rem;
         display: block;
         float: left;
@@ -78,7 +78,7 @@
       }
       &-text_container {
         height: 100%;
-        width: 25rem;
+        width: 26rem;
         margin: 0 1rem;
         display: block;
         float: right;
@@ -178,13 +178,16 @@
   .about_section {
     &__row {
       &--max {
-        width: 95%;
+        width: 100%;
 
         &-text_container {
         }
       }
       &--booke {
-        width: 95%;
+        width: 100%;
+        &-text_container {
+          width: 100%;
+        }
       }
     }
   }
