--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,6 +13,10 @@
     list-style: none;
     line-height: 2;
   }
+  .fa {
+    color: black;
+    font-size: 2rem;
+  }
   .links {
     text-decoration: underline;
     border-right: 3px solid black;
